# ChronoGrapher

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  LICENSE  Makefile  README.md  ROADMAP.md  STYLE GUIDELINES.md  STYLE_GUIDELINES.md  llms.txt  package-lock.json  package.json
base/: Cargo.toml
base/benches/: cron_lexer.rs  timing_wheel.rs
base/src/: errors.rs  lib.rs  scheduler.rs  task.rs  utils.rs
base/src/scheduler/: clock.rs  engine.rs  impls.rs  task_dispatcher.rs  task_store.rs  utils.rs
base/src/scheduler/clock/: progressive_clock.rs  virtual_clock.rs
base/src/scheduler/engine/: default.rs
base/src/scheduler/impls/: live.rs  utils.rs
base/src/scheduler/impls/utils/: main_loop.rs  scheduler_handle.rs
base/src/scheduler/task_dispatcher/: default.rs
base/src/scheduler/task_store/: ephemeral.rs
base/src/scheduler/utils/: main_loop.rs  rescheduling.rs  scheduler_handle.rs
base/src/task/: dependency.rs  frame_builder.rs  frames.rs  hooks.rs  schedule.rs  trigger.rs
base/src/task/dependency/: dynamic.rs  task.rs
base/src/task/frames/: collectionframe.rs  conditionframe.rs  delayframe.rs  dependencyframe.rs  dynamicframe.rs  fallbackframe.rs  noopframe.rs  retryframe.rs  thresholdframe.rs  timeoutframe.rs
base/src/task/schedule/: calendar.rs  cron.rs  cron_parser.rs  immediate.rs  interval.rs
base/src/task/trigger/: schedule.rs
base/src/task/trigger/schedule/: calendar.rs  cron.rs  cron_lexer.rs  cron_parser.rs  immediate.rs  interval.rs
base/src/utils/: identifier.rs  macros.rs  slotmap.rs  timing_wheel.rs
base/src/utils/timing_wheel/: hierarchical_timing_wheel.rs  timing_wheel_shard.rs
benches/: Cargo.toml
core/: Cargo.toml  README.md
core/src/: backend.rs  clock.rs  errors.rs  lib.rs  main.rs  persistence.rs  persistent_object.rs  retrieve_registers.rs  schedule.rs  scheduler.rs  scheduling_strats.rs  serialized_component.rs  task.rs  utils.rs
core/src/backend/: default.rs
core/src/clock/: system_clock.rs  virtual_clock.rs
core/src/persistence/: backend.rs  registries.rs
core/src/schedule/: calendar.rs  cron.rs  immediate.rs  interval.rs
core/src/scheduler/: clock.rs  engine.rs  task_dispatcher.rs  task_store.rs  timing_wheel_core.rs  utils.rs
core/src/scheduler/clock/: progressive_clock.rs  system_clock.rs  virtual_clock.rs
core/src/scheduler/engine/: default.rs
core/src/scheduler/task_dispatcher/: default.rs
core/src/scheduler/task_store/: default.rs  ephemeral.rs  timing_wheel.rs
core/src/scheduler/utils/: main_loop.rs  rescheduling.rs  scheduler_handle.rs
core/src/task/: dependency.rs  error_handler.rs  events.rs  extension.rs  frame_builder.rs  frames.rs  hooks.rs  metadata.rs  priority.rs  schedule.rs  scheduling_strats.rs  timeoutframe.rs  trigger.rs
core/src/task/dependency/: dynamic.rs  flag.rs  logical.rs  metadata.rs  task.rs
core/src/task/extension/: metadata.rs
core/src/task/frames/: assertframe.rs  collectionframe.rs  conditionframe.rs  delayframe.rs  dependencyframe.rs  dynamicframe.rs  executionframe.rs  fallbackframe.rs  misc.rs  noopframe.rs  parallelframe.rs  retryframe.rs  selectframe.rs  sequentialframe.rs  thresholdframe.rs  timeoutframe.rs
core/src/task/hooks/: error_handler.rs
core/src/task/schedule/: calendar.rs  cron.rs  immediate.rs  interval.rs
core/src/task/trigger/: schedule.rs
core/src/task/trigger/schedule/: calendar.rs  cron.rs  cron_lexer.rs  cron_parser.rs  immediate.rs  interval.rs
core/src/utils/: identifier.rs  macros.rs
core/src/utils/timing_wheel/: hierarchical_timing_wheel.rs  timing_wheel_shard.rs
core/tests/: shared_data_test.rs  taskhook_shared_data_test.rs  taskhook_test.rs  test_task_hooks.rs  tests.rs  timing_wheel_core_test.rs  virtual_clock_test.rs
core/tests/dependency_test/: flag_resolution_test.rs  task_dependency_test.rs
docs/: .gitignore  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  source.config.ts
proc/: Cargo.toml
proc-core/: Cargo.toml
proc/src/: cron.rs  cron_lexer.rs  entry.rs  event.rs  every.rs  hook.rs  lib.rs  task.rs  taskframe.rs  utils.rs  workflow.rs
proc/src/event/: event_enum.rs  event_struct.rs  event_trait.rs  utils.rs
proc/src/hook/: hook_annotation.rs  hook_event_annotation.rs
proc/src/utils/: impl_traits_with_generics.rs  time_literal.rs
proc/src/workflow/: condition.rs  delay.rs  dependency.rs  fallback.rs  retry.rs  threshold.rs  timeout.rs  utils.rs
(+172 files in other folders)
