[workspace]
resolver = "3"
members = ["base", "benches", "bin", "core", "proc", "tests"]
exclude = ["tests", "benches", "bin"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.release-prof]
inherits = "release"
debug = true
lto = false
codegen-units = 1
panic = "unwind"
split-debuginfo = "packed"
