[package]
name = "chronographer"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
homepage = "https://github.com/GitBrincie212/ChronoGrapher"
authors = ["McBrincie212"]
description = "The core library (acts as a foundation) for the ChronoGrapher scheduling / workflow orchestration platform"
readme = "README.md"
repository = "https://github.com/GitBrincie212/ChronoGrapher"
keywords = ["ChronoGrapher", "scheduler", "scheduling", "workflow", "orchestration"]
categories = ["embedded", "asynchronous"]

[lib]
name = "chronographer"
crate-type = ["rlib"]

[dependencies]
chronographer_base = {path = "../base"}
chronographer_macros = {path = "../proc" }