[package]
name = "chronographer_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0"
strsim = "0.11.1"
darling = "0.23.0"
chronographer_base = { path = "../base" }
chronographer_utils = { path = "../utils"}
proc-macro2 = "1.0.101"

[dev-dependencies]
chronographer = {path = "../core"}